--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,5 +1,6 @@
 .outlet {
   width: 1556px;
-  height: 2301px;
-  padding: 0 180px 167px 180px;
+  //height: 2301px;
+  padding: 10px 180px 10px 180px;
+  //padding: 10px 180px 167px 180px;
 }
