--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -3,3 +3,23 @@
 @import 'reset';
 @import 'theme';
 @import 'patch';
+
+@import url('https://fonts.googleapis.com/css?family=Roboto:300,300i,400,400i,500,500i,700,700i,900,900i');
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+
+  to {
+    opacity: 1;
+  }
+}
+
+.fadeInAnimation {
+  animation-name: fadeIn;
+  -webkit-animation-duration: 0.7s;
+  animation-duration: 0.7s;
+  -webkit-animation-fill-mode: both;
+  animation-fill-mode: both;
+}
