Story extra developed

--- a/src/app/bestsellers/bestsellers.component.html
+++ b/src/app/bestsellers/bestsellers.component.html
@@ -1,4 +1,6 @@
 <div class="bestsellers fadeInAnimation">
+  <app-banner-game [game]="bannerGame"></app-banner-game>
+
   <p class="bestsellers-title">{{ title | uppercase }}</p>
 
   <div class="cards-container">
