--- a/src/app/game-card/game-card.component.scss
+++ b/src/app/game-card/game-card.component.scss
@@ -6,7 +6,7 @@
 * {
   margin: 0;
   padding: 0;
-  font-family: TTNorms;
+  font-family: 'TTNorms';
   font-stretch: normal;
   font-style: normal;
   letter-spacing: normal;
